fixes font size for highlight on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,5 @@
 html {
-  font-size: 12px;
-}
-@media (min-width: 720px) {
-  html {
-    font-size: 14px;
-  }
+  font-size: 14px;
 }
 
 body {
@@ -28,6 +23,7 @@ body {
   background-color: rgba(255,255,255, 0.8);
   z-index: 1000;
 }
+
 .overlay .complaint-container {
   position: relative;
   margin: 15vh auto;
@@ -281,6 +277,7 @@ body {
 
 .complaint-container {
   display: table;
+  font-size: 12px;
   max-width: 100%;
   min-height: 128px;
   max-height: 200px;
@@ -292,6 +289,11 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% 100%;
+}
+@media (min-width: 720px) {
+  .complaint-container {
+    font-size: 16px;
+  }
 }
 
 #complaint-container-highlight {
